// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.TFoot allowTags 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkGrammar 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkGrammar 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkGrammar 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkGrammar 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkHighlight 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkHighlight 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkHighlight 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkHighlight 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkSpaces 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkSpaces 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkSpaces 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkSpaces 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot className 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 1`] = `
<tfoot
  className="color-schema-default uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 2`] = `
<tfoot
  className="color-schema-red uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 3`] = `
<tfoot
  className="color-schema-red uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 4`] = `
<tfoot
  className="color-schema-red-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 5`] = `
<tfoot
  className="color-schema-red-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 6`] = `
<tfoot
  className="color-schema-green uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 7`] = `
<tfoot
  className="color-schema-green uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 8`] = `
<tfoot
  className="color-schema-green-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 9`] = `
<tfoot
  className="color-schema-green-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 10`] = `
<tfoot
  className="color-schema-yellow uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 11`] = `
<tfoot
  className="color-schema-yellow uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 12`] = `
<tfoot
  className="color-schema-yellow-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 13`] = `
<tfoot
  className="color-schema-yellow-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 14`] = `
<tfoot
  className="color-schema-purple uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 15`] = `
<tfoot
  className="color-schema-purple uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 16`] = `
<tfoot
  className="color-schema-purple-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 17`] = `
<tfoot
  className="color-schema-purple-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 18`] = `
<tfoot
  className="color-schema-brown uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 19`] = `
<tfoot
  className="color-schema-brown uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 20`] = `
<tfoot
  className="color-schema-brown-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 21`] = `
<tfoot
  className="color-schema-brown-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 22`] = `
<tfoot
  className="color-schema-orange uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 23`] = `
<tfoot
  className="color-schema-orange uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 24`] = `
<tfoot
  className="color-schema-orange-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 25`] = `
<tfoot
  className="color-schema-orange-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 26`] = `
<tfoot
  className="color-schema-cyan uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 27`] = `
<tfoot
  className="color-schema-cyan uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 28`] = `
<tfoot
  className="color-schema-cyan-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 29`] = `
<tfoot
  className="color-schema-cyan-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 30`] = `
<tfoot
  className="color-schema-grey uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 31`] = `
<tfoot
  className="color-schema-grey uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 32`] = `
<tfoot
  className="color-schema-grey-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 33`] = `
<tfoot
  className="color-schema-grey-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 34`] = `
<tfoot
  className="color-schema-pink uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 35`] = `
<tfoot
  className="color-schema-pink uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 36`] = `
<tfoot
  className="color-schema-pink-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 37`] = `
<tfoot
  className="color-schema-pink-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema 38`] = `
<tfoot
  className="color-schema-pink uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot content 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot content 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot content 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot content 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot controlled 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot controlled 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot controlled 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot controlled 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot default props 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot disabled 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</tfoot>
`;

exports[`UU5.Bricks.Table.TFoot disabled 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot disabled 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot disabled 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</tfoot>
`;

exports[`UU5.Bricks.Table.TFoot docKit examples UU5.Bricks.Table.TFoot should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-table"
    id="uuID2"
    style={Object {}}
    title={null}
  >
    <h1
      className="uu5-bricks-header uu5-common-text"
      id="uuID2-header"
      style={Object {}}
      title={null}
    >
      Table
    </h1>
    <table
      className="uu5-bricks-table-table"
    >
      <thead
        className="uu5-bricks-table-thead"
        style={Object {}}
        title={null}
      >
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <th
            className="uu5-bricks-table-th uu5-common-text"
            style={Object {}}
            title={null}
          >
            Name
          </th>
          <th
            className="uu5-bricks-table-th uu5-common-text"
            style={Object {}}
            title={null}
          >
            Rank
          </th>
          <th
            className="uu5-bricks-table-th uu5-common-text"
            style={Object {}}
            title={null}
          >
            Promotion prospects
          </th>
        </tr>
      </thead>
      <tbody
        className="uu5-bricks-table-tbody"
        style={Object {}}
        title={null}
      >
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            Rimmer
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            2nd class technician
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            comical
          </td>
        </tr>
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            Kristine Kochanski
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            1st console officer
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            high
          </td>
        </tr>
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            Dave Lister
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            3rd class technician
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            zero
          </td>
        </tr>
      </tbody>
      <tfoot
        className="color-schema-red color-schema-danger uu5-bricks-table-tfoot"
        style={Object {}}
        title={null}
      >
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <th
            className="uu5-bricks-table-th uu5-common-text"
            style={Object {}}
            title={null}
          >
            Best rank
          </th>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            1st console officer
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`UU5.Bricks.Table.TFoot dynamic 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot dynamic 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot dynamic 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot dynamic 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot hidden 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot hidden 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot hidden 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot hidden 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot id 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot ignoreHTML 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot ignoreHTML 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot ignoreHTML 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot ignoreHTML 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot mainAttrs 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot name 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 5`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 6`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 7`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 8`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 9`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 10`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 11`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 12`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 13`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 14`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 15`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 16`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 17`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 18`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Table.TFoot nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Table.TFoot noIndex 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot noIndex 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot noIndex 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot noIndex 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot props.allowTags example 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="Table"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID1-header"
    ignoreInnerHTML={false}
    key="uuID1-header"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-tbody
      allowTags={Array []}
      className={null}
      colorSchema="blue"
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID2"
      ignoreInnerHTML={false}
      key="uuID2"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuID3"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Rimmer"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID4"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="2nd class technician"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID5"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="comical"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID6"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-tbody>
    <table-tfoot
      allowTags={
        Array [
          "UU5.Example.MyCompButton",
        ]
      }
      className={null}
      colorSchema="danger"
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID7"
      ignoreInnerHTML={false}
      key="uuID7"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuID8"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Best rank"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID9"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="1st console officer"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID10"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <MyAllowTagsComponents
          className={null}
          id="allowID"
          mainAttrs={null}
          name={null}
          noIndex={false}
          ref_={null}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-tfoot>
  </table>
  <Footer
    className={null}
    content="Table footer"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID1-footer"
    ignoreInnerHTML={false}
    key="uuID1-footer"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Table.TFoot pureRender 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot pureRender 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot pureRender 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot pureRender 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot selected 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot selected 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot selected 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot selected 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot style 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot style 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot style 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot style 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot textCorrector 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot textCorrector 2`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot textCorrector 3`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot textCorrector 4`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot tooltip 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
